--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
+    "socket.io": "^4.8.1",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
